fix(tabs): vertical tabs text alignment

--- a/elements/rh-tabs/rh-tab.css
+++ b/elements/rh-tabs/rh-tab.css
@@ -62,6 +62,10 @@ button {
   max-height: 100%;
 }
 
+:host([vertical]) button {
+  text-align: start;
+}
+
 button:focus-visible {
   outline: var(--rh-border-width-md, 2px) solid var(--_button-focus-outline-color);
   outline-offset: -8px;
